Basics of navigation and routing

--- a/APM-Start/src/app/app.component.html
+++ b/APM-Start/src/app/app.component.html
@@ -1,7 +1,22 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div >
-  <h1>
-    {{title}}
-  </h1>
-  <pm-Products></pm-Products>
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <a class="navbar-brand">{{pagetitle}}</a>
+  <ul class="nav nav-pills">
+    <li>
+      <a class="nav-link" [routerLink]="['/welcome']">
+        Home
+      </a>
+    </li>
+    <li>
+      <a class="nav-link" [routerLink]="['/products']">
+        Product List
+      </a>
+    </li>
+  </ul>
+</nav>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
+
+  
+
