--- a/APM-Start/src/app/home/welcome.component.html
+++ b/APM-Start/src/app/home/welcome.component.html
@@ -10,14 +10,14 @@
              style="max-height:300px;padding-bottom:50px" />
       </div>
 
-      <div class="text-center">Developed by:</div>
+      <div class="text-center">Practiced by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>Kushagra Sharma</h3>
       </div>
 
-      <div class="text-center">@deborahkurata</div>
+      <div class="text-center">@Kushagra Sharma</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://github.com/Developerkushagra">https://github.com/Developerkushagra</a>
       </div>
     </div>
   </div>
