--- a/APM-Start/src/app/Products/Product-list.component.html
+++ b/APM-Start/src/app/Products/Product-list.component.html
@@ -42,7 +42,11 @@
               *ngIf='showImage'
               />
             </td>
-            <td>{{product.productName }}</td>
+            <td>
+              <a [routerLink]="['/products',product.productId]"> 
+                {{ product.productName }} 
+              </a>
+            </td>
             <td>
               {{product.productCode|lowercase|convertToSpaces: '-'}}
             </td>
