--- a/APM-Start/src/app/Products/product-detail.component.html
+++ b/APM-Start/src/app/Products/product-detail.component.html
@@ -1,6 +1,12 @@
-<div class='card'
-     *ngIf='product'>
+<div class='card'>
   <div class='card-header'>
-    {{pageTitle + ': ' + product.productName}}
+    {{pageTitle}}
   </div>
+  <div class="card-footer">
+      <button class="btn btn-outline-secondary"
+      (click)='onBack()'
+      style="widows: 80px">
+      <i class="fa fa-chevron-left"></i> Back
+    </button>
   </div>
+</div>
