--- a/APM-Start/src/app/Products/Product-list.component.html
+++ b/APM-Start/src/app/Products/Product-list.component.html
@@ -43,7 +43,8 @@
               />
             </td>
             <td>
-              <a [routerLink]="['/products',product.productId]"> 
+              <a [routerLink]="['/products',product.productId]"
+              > 
                 {{ product.productName }} 
               </a>
             </td>
